actualizacion de proxy a vps personal

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://crm-backend-avso2v-374d28-72-60-65-170.traefik.me"
+  "proxy": "https://crm-react.sbravo.app"
 }
